Fixed bug where content shifted when scroll bar appeared.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,8 +17,8 @@ dl, dd, ol, ul, figure {
 /* Fixed footer */
 html {
     position: relative;
-    overflow: auto;
     min-height: 100%;
+    overflow-y: scroll;
 }
 
 body {
@@ -30,14 +30,7 @@ body {
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
     margin-bottom: 100px;
-    overflow: auto;
-    height: 100%;
     width: 100%;
-}
-
-/* unset bs3 setting */
-.modal-open {
- overflow: auto;
 }
 
 /**
